📝 Add code descriptions